@@ -741,20 +741,6 @@ _read_config(void)
 		    &conf->block_map_size,
 		    &conf->block_map, &conf->block_map_inv);
 
-	if(cf->fast_schedule &&
-	   ((conf->conf_cpus != conf->actual_cpus)    ||
-	    (conf->sockets   != conf->actual_sockets) ||
-	    (conf->cores     != conf->actual_cores)   ||
-	    (conf->threads   != conf->actual_threads))) {
-		info("Node configuration differs from hardware\n"
-		     "   Procs=%u:%u(hw) Sockets=%u:%u(hw)\n"
-		     "   CoresPerSocket=%u:%u(hw) ThreadsPerCore=%u:%u(hw)",
-		     conf->conf_cpus,    conf->actual_cpus,
-		     conf->conf_sockets, conf->actual_sockets,
-		     conf->conf_cores,   conf->actual_cores,
-		     conf->conf_threads, conf->actual_threads);
-	}
-
 	if((cf->fast_schedule == 0) || (conf->actual_cpus < conf->conf_cpus)) {
 		conf->cpus    = conf->actual_cpus;
 		conf->sockets = conf->actual_sockets;
@@ -766,6 +752,21 @@ _read_config(void)
 		conf->cores   = conf->conf_cores;
 		conf->threads = conf->conf_threads;
 	}
+
+	if(cf->fast_schedule &&
+	   ((conf->cpus    != conf->actual_cpus)    ||
+	    (conf->sockets != conf->actual_sockets) ||
+	    (conf->cores   != conf->actual_cores)   ||
+	    (conf->threads != conf->actual_threads))) {
+		info("Node configuration differs from hardware\n"
+		     "   Procs=%u:%u(hw) Sockets=%u:%u(hw)\n"
+		     "   CoresPerSocket=%u:%u(hw) ThreadsPerCore=%u:%u(hw)",
+		     conf->cpus,    conf->actual_cpus,
+		     conf->sockets, conf->actual_sockets,
+		     conf->cores,   conf->actual_cores,
+		     conf->threads, conf->actual_threads);
+	}
+
 	get_memory(&conf->real_memory_size);
 	get_up_time(&conf->up_time);
 
